city guide tweaks

--- a/_pages/cityguides/bergen/index.html
+++ b/_pages/cityguides/bergen/index.html
@@ -9,7 +9,7 @@ intro: Den perfekte blandingen av historisk og trendy finner du i Norges våtest
 
 banner:
   title: "{{page.title}}"
-  title-sub: Design Guide
+  title-sub: Designguide
 
 features:
 
@@ -19,17 +19,17 @@ features:
     title: God kaffe til folket
     description: Kaffemisjonen er på evig jakt etter verdens beste kaffe – og de er ikke langt unna. Og selv om kaffen i seg selv er verdt et besøk, serverer dette stedet også nydelig mat hele dagen. Prøv einerøket laks, ferskskåret spekemat eller den hjemmelagde hummusen for en deilig matbit før du legger ut på oppdagelsesferd.
 
-  - id: bergen-segway
+  - id: regn
     time: "10:00"
-    place: Bergen Segway
-    title: Den mest populære måten å se Bergen
-    description: Trange, brosteinsbelagte gater med små, gamle trehus i ulike farger er noe av det Bergen er mest kjent for. Med denne turen kan du velge selv hva du ønsker å fokusere på. I sentrum tar de deg blant annet til byens teater, Den Blå Steinen, Johanneskirken og Lille Lungegårdsvannet.
+    place: REGN
+    title: Trendy på en regnværsdag
+    description: Når du har kommet til denne delen av landet, kan det være lurt å sørge for at du har klærne i orden. Multibrand-butikken Regn, har et skandinavisk designuttrykk og tilbyr deg kjente merkevarer til både kvinner og menn. De har et ønske om å tilby kundene sine luksus til en prislapp som ikke gjør vondt, og alt de har er nøye utvalgt til å passe det skandinaviske trendbildet (og været).
 
-  - id: fisketorget
+  - id: usf-verftet
     time: "12:14"
-    place: Fisketorget
-    title: Ikonisk og fristende
-    description: I hjertet av byen finner du det berømte Fisketorget. Med en historie som strekker seg helt tilbake til 1200-tallet, er dette alltid verdt et besøk for både besøkende og Bergensere. Her finner du fersk fisk og sjømat, lokalprodusert gårdsmat som frukt, bær og grønnsaker samt blomster og planter. Det er dog ikke bare historierikt her, det nye og moderne bygget til Mathallen er det perfekte stedet å stoppe for en matbit når du først er her – det er lite som smaker så godt som helt fersk fisk.
+    place: USF Verftet
+    title: Hjemmet til kulturelle Bergen
+    description: Det er kjent som Bergens store kultur- og scenehus, men har likevel mye annet å by på. Du finner kunstutstillinger, visninger av episke filmer, inspirerende foredrag og superhyggelige Klippers Bar og Kafé. Her sitter du tett på Puddefjorden og kan følge med på både båttrafikk og folk. Uteserveringen om sommeren kaller de selv «legendarisk nydelig», et utrykk vi er legendarisk enig i.
 
   - id: kode-kunstmuseer-og-komponisthjem
     time: "14:02"
@@ -47,7 +47,7 @@ features:
     time: "18:02"
     place: Fløibanen
     title: En av de mest kjente turistattraksjonene
-    description: Hva er vel en tur til Bergen uten en tur opp til Fløyen? Uansett om det er din første tur eller din femte, er en tur med Fløibanen alltid en god ide. Selve turen opp fra sentrum er en attraksjon i seg selv, men på toppen venter en fantastisk utsikt over Bergen. Du befinner deg 320 meter over havet, og du kan peke ut de fleste steder du har besøkt i byen.
+    description: Hva er vel en tur til Bergen uten en tur opp til Fløyen? Uansett om det er din første tur eller din femtende, er en tur med Fløibanen alltid en god ide. Selve turen opp fra sentrum er en opplevelse i seg selv, men på toppen venter en fantastisk utsikt over Bergens unike arkitektur og skjønnhet. De tre mellomstasjonene før du ankommer toppen har dessuten blitt ombygd og gitt et estetisk løft av Bergens-arkitekten Elisabeth Rakner.
 
   - id: restaurant-1877
     time: "19:34"
