--- a/_pages/cityguides/oslo/index.html
+++ b/_pages/cityguides/oslo/index.html
@@ -9,7 +9,7 @@ intro: Hovedstaden vår er en by som stadig blomster frem, og i fjor ble Tigerst
 
 banner:
   title: "{{page.title}}"
-  title-sub: Design Guide
+  title-sub: Designguide
 
 features:
 
@@ -19,11 +19,11 @@ features:
     title: Både mat og stemning på tobb
     description: Det er tidlig og du trenger en sterk kaffe og en smakfull matopplevelse. Den trivelige kafeen er inspirert av Berlin og serverer nydelige frokostretter og en rekke te- og kaffevalg. Med retro møbler og et miljøvennlig fokus er det lett å føle seg litt ekstra kul til frokost. Du kan også utnytte deg av brettspillene for å sette i gang hjernen litt skikkelig. Stemningen er god og hipp – og servicen er upåklagelig.
 
-  - id: botanisk-hage
+  - id: grunerlokka
     time: "10:50"
-    place: Botanisk hage
-    title: Et levende museum
-    description: Botanisk hage ligger kun en kort gåtur unna frokosten din, slik at du kan la maten synke i fred. Hagen ble etablert helt tilbake i 1814, og med sin samling på over 5.500 plantearter er dette et sted du virkelig kan lade batteriene, før du fortsetter eventyret ditt i Oslo.  Pass på å få med deg avdelingen som heter dufthagen, for en opplevelse som gjør godt for både øynene og nesen.
+    place: Grünerløkka
+    title: En god blanding på Løkka
+    description: Uansett om det er vintagekupp, gatekunst eller en trendy hårklipp du trenger, finner du alt samlet i et av Oslos hippeste områder. Her finner du originale designbutikker, vintagebutikker og en hel haug av såkalt hipstere – det er et godt tegn.  På søndager arrangeres dessuten et utemarked langs Akerselva på Blå, som virkelig er verdt å få med seg.
 
   - id: astrup-fearnley-museum-of-modern-art
     time: "12:07"
@@ -31,11 +31,11 @@ features:
     title: Like rått på utsiden som innsiden
     description: Museet er ikke bare vakkert og imponerende fra utsiden, her finner du også en av Norges viktigste og mest omfattende private samlinger av samtidskunst. Den omfatter verk av internasjonale og norske samtidskunstnere, og fokuserer på individuelle kunstverk og kunstnere. Du har kanskje fått med deg verket «Mother and Child», men det er noe helt annet å se det på ekte.
 
-  - id: nobels-fredssenter
+  - id: nasjonalmuseet
     time: "13:39"
-    place: Nobels Fredssenter
-    title: Et museum om fred
-    description: Nobels Fredsenter er museet om Nobels fredpris. Her presenteres fredsprisvinnerne og deres arbeid, samt historien om Alfred Nobel. Museet skifter stadig ut utstillingene sine og her er det muligheter for å reflektere rundt store temaer knyttet til krig, fred og konfliktløsning.  I Nobels hage finner du alle som noensinne har vunnet en fredspris, og du kan lese om alle og enhver omgitt av tusen små lys.
+    place: Nasjonalmuseet
+    title: Landets mest omfattende
+    description: Nasjonalmuseet har Norges mest omfattende samlinger av kunst, arkitektur og design. Her kan du vandre blant 400.000 forskjellige objekter, og du finner blant annet samlinger av møbler, drakter, skissebøker og kunsthåndverk. I 2020 åpner museet dørene i et splitter nytt lokale som også blir Nordens største kunstmuseum. Med det nye bygget håper museet å sette Norge på verdenskartet som en kunstnasjon.
 
   - id: mathallen
     time: "14:20"
