--- a/_pages/tilbud/index.html
+++ b/_pages/tilbud/index.html
@@ -4,6 +4,6 @@ id: hotels
 nav: true
 nav-order: 5
 
-title: Hotell
+title: Tilbud
 intro: Søk blant våre designhoteller i Norge og resten av verden og reis på en stilsikker getaway.
 ---
