--- a/_pages/designhotell/index.html
+++ b/_pages/designhotell/index.html
@@ -58,7 +58,7 @@ features:
     title: Royal Mansour
     location: Marrakech, Marocko
     description: >
-      Detta är marockansk stil i sitt esse. Dessa intima riads beställdes av kung Mohammed VI, som anställde ett svindlande antal av landets finaste hantverkare, som i sin tur skapade de oklanderligt detaljerade interiörerna. Nu erbjuder varje riad en lyxig vistelse, där vackert marockanskt kakel, överdådig inredning och en oklanderlig service skapar en kunglig upplevelse. Området är byggt i en sann medina-stil med solbelysta gränder och en känsla för detaljer som skapar en stämning som inte är annat än magisk.
+      Detta är marockansk stil i sitt esse. Dessa intima riader beställdes av kung Mohammed VI, som anställde ett svindlande antal av landets bästa hantverkare, som i sin tur skapade de oklanderligt detaljerade interiörerna. Nu erbjuder varje riad en lyxig vistelse, där vackert marockanskt kakel, överdådig inredning och en oklanderlig service skapar en kunglig upplevelse. Området är byggt i en sann medina-stil med solbelysta gränder och en känsla för detaljer som skapar en stämning som inte är annat än magisk.
 
   - id: awasi-patagonia
     title: Awasi Patagonia
