--- a/_pages/kampanjer/index.html
+++ b/_pages/kampanjer/index.html
@@ -4,6 +4,6 @@ id: hotels
 nav: true
 nav-order: 5
 
-title: Hotell
+title: Kampanjer
 intro: Sök bland våra designhotell i Sverige och resten av världen och åk på en stilsäker getaway.
 ---
