--- a/_pages/cityguider/goteborg/index.html
+++ b/_pages/cityguider/goteborg/index.html
@@ -5,11 +5,11 @@ group-parent: city-guides
 group-order: 2
 
 title: Göteborg
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati aliquam doloremque maiores. Aliquam, voluptate, eligendi? Id nostrum sit voluptates saepe nam, dolorum repellat incidunt fugiat, sed ad a vel!
+intro: Sveriges framsida har så mycket mer att erbjuda än Feskekôrka, Ullevi och Avenyn. Mixa två av landets anrikaste skolor för konst och design med Göteborgs industriella arv, högteknologisk forskning och influenser utifrån och du får en dynamisk plats som sjuder av kreativ experimentlusta och mångfald. Ta ett steg bort från de vanliga turiststråken och upptäck en stad i ständig förändring med såväl cool design som nyskapande postmodernistisk arkitektur och spännande krogkoncept.
 
 banner:
   title: "{{page.title}}"
-  title-sub: Design Guide
+  title-sub: Designguide
 
 features:
 
@@ -39,7 +39,7 @@ features:
     place: Röda Stens Konsthall
     title: Street art, samtidskonst och lunch på en av Göteborgs mest ikoniska platser
     description: >
-      Konsthallen på Röda Sten har haft lagliga väggar sedan Ebbot var smal vilket har gjort att hela området under bron blivit till ett slags dynamiskt utomhusgalleri. Här blandas högt och lågt, provokativt och dekorativt huller om buller för att nästa vecka bytas ut mot någonting annat. Utöver street art de har också utställningar med samtidskonst och en utmärkt restaurang som serverar lunch med smaker från världens alla hörn. Vid vackert väder kan man sitta på uteserveringen och titta på kranar och fartyg som passerar förbi.
+      Konsthallen på Röda Sten har haft lagliga väggar sedan Ebbot var smal vilket har gjort att hela området under bron blivit till ett slags dynamiskt utomhusgalleri. Här blandas högt och lågt, provokativt och dekorativt huller om buller för att nästa vecka bytas ut mot någonting annat. Utöver street art har de också utställningar med samtidskonst och en utmärkt restaurang som serverar lunch med smaker från världens alla hörn. Vid vackert väder kan man sitta på uteserveringen och titta på kranar och fartyg som passerar förbi.
 
   - id: rohsska-museet
     time: "16:33"
