--- a/_pages/cityguider/stockholm/index.html
+++ b/_pages/cityguider/stockholm/index.html
@@ -5,11 +5,11 @@ group-parent: city-guides
 group-order: 1
 
 title: Stockholm
-intro: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla obcaecati aliquam doloremque maiores. Aliquam, voluptate, eligendi? Id nostrum sit voluptates saepe nam, dolorum repellat incidunt fugiat, sed ad a vel!
+intro: Med sin blandning av funktionalism, minimalism och populärkulturell fingertoppskänsla placerar sig Stockholm ständigt högt upp på listorna över världens coolaste huvudstäder. Utbudet av butiker, barer, gallerier och kaféer är under ständig förändring och det dyker hela tiden upp nya smultronställen att besöka. Samtidigt lever klassikerna kvar och lockar nya generationer besökare år efter år. Den perfekta Stockholmsvistelsen är en blandning av gammalt och nytt, välbekant och okänt. Här följer några tips på ställen att besöka i den kungliga huvudstaden.
 
 banner:
   title: "{{page.title}}"
-  title-sub: Design Guide
+  title-sub: Designguide
 
 features:
 
@@ -23,7 +23,7 @@ features:
   - id: svenskt-tenn
     time: "10:09"
     place: Svenskt Tenn
-    title: Möt Frank och Malmsten eller hitta nya bekantskaper på Stockholms mest legendariska inredningsbutik
+    title: Möt Frank och Malmsten på Stockholms mest legendariska inredningsbutik
     description: >
       Vad vore en bättre start på din vistelse än att göra ett besök på flaggskeppet för svensk form? På Svenskt Tenn hittar du Josef Franks tidlösa klassiker tillsammans med nyskapande design från samtida formgivare. Botanisera bland textilier, möbler och vackra prydnadsföremål eller slå dig ner i någon av Carl Malmstens klassiska stolar i Malmstenbutiken som ligger precis vägg i vägg.
 
@@ -43,8 +43,8 @@ features:
 
   - id: secondhand-pa-hornsgatan
     time: "14:31"
-    place: Secondhand på Hornsgatan
-    title: Botanisera bland udda, unika och återupptäckta ting på hippa Södermalm
+    place: Secondhand på Södermalm
+    title: Botanisera bland udda, unika och återupptäckta ting på hippa Hornsgatan
     description: >
       Nu när du befinner dig på Södermalm, framröstad till en av de trendigaste stadsdelarna i Europa av ett flertal internationella sajter, är en runda i öns många vintage- och secondhandbutiker ett måste. En bra utgångspunkt för jakten på unika och udda ting är området runt Mariatorget och Hornsgatan där det ligger både enklare secondhandaffärer som Stadsmissionen och Myrorna och tjusiga vintagebutiker med noga utvalda objekt. Till exempel kan du slinka in på Herr Judit Brandstationen där du hittar spännande inredning och inspiration till hemmet.
 
