--- a/_pages/designhotell/index.html
+++ b/_pages/designhotell/index.html
@@ -34,7 +34,7 @@ features:
     title: Fogo Island Inn
     location: Newfoundland, Kanada
     description: >
-      APå Newfoundlands väderbenade kust står ett styltat och slående modernt trähus: välkommen till Fogo Island Inn. Den närliggande fiskebyn kunde inte kännas mer olik, när det kommer till hotellets anmärkningsvärda arkitektur, men faktum är att hotellet tjänar lokalsamhället lika mycket som lokalbefolkningen tjänar hotellet i ett balanserat förhållande som färgat hela området. Köket är beroende av lokalbornas fiskekunskap och gästerna erbjuds turer med lokala guider. Varje rum bjuder på havsutsikt från golv till tak, vilket gör att det nästan känns som att man glider runt i det hippaste kryssningsfartyget på havet.
+      På Newfoundlands väderbenade kust står ett styltat och slående modernt trähus: välkommen till Fogo Island Inn. Den närliggande fiskebyn kunde inte kännas mer olik, när det kommer till hotellets anmärkningsvärda arkitektur, men faktum är att hotellet tjänar lokalsamhället lika mycket som lokalbefolkningen tjänar hotellet i ett balanserat förhållande som färgat hela området. Köket är beroende av lokalbornas fiskekunskap och gästerna erbjuds turer med lokala guider. Varje rum bjuder på havsutsikt från golv till tak, vilket gör att det nästan känns som att man glider runt i det hippaste kryssningsfartyget på havet.
 
   - id: the-beekman
     title: The Beekman
