--- a/_pages/cityguides/oslo/index.html
+++ b/_pages/cityguides/oslo/index.html
@@ -16,7 +16,7 @@ features:
   - id: liebling
     time: "09:08"
     place: Liebling
-    title: Både mat og stemning på tobb
+    title: Både mat og stemning på topp
     description: Det er tidlig og du trenger en sterk kaffe og en smakfull matopplevelse. Den trivelige kafeen er inspirert av Berlin og serverer nydelige frokostretter og en rekke te- og kaffevalg. Med retro møbler og et miljøvennlig fokus er det lett å føle seg litt ekstra kul til frokost. Du kan også utnytte deg av brettspillene for å sette i gang hjernen litt skikkelig. Stemningen er god og hipp – og servicen er upåklagelig.
 
   - id: grunerlokka
@@ -52,7 +52,7 @@ features:
   - id: maeemo
     time: "18:42"
     place: Maeemo
-    title: En av verdens 50ende beste
+    title: En av verdens femtiende beste
     description: Med hele tre stjerner i Michelin-guiden bør du prøve å få til en middag her. Kokken ønsker å gi gjestene sine en komplett opplevelse. Selve ordet Maeemo er norrønt og betyr Moder Jord, og det er her inspirasjonen er hentet fra. Restauranten har kun åtte bord i hovedrommet, men har også et privat prøvebord med fantastisk utsikt over Bjørvika. Her vil du virkelig kjenne på eksklusiviteten.
 
   - id: angst-bar
