--- a/_pages/guide-delle-citta/roma/index.html
+++ b/_pages/guide-delle-citta/roma/index.html
@@ -18,21 +18,21 @@ features:
     place: Sant’Eustachio Il Caffè
     title: Dal 1938 il più buon caffè di tutta Roma
     description: >
-      Per iniziare la giornata da vero romano doc dovrai tuffarti nel cuore della città, direzione Sant’Eustachio Il Caffè. Tra Piazza Navona e il Pantheon, un antico palazzo dell’800 ospita il bar più conosciuto di Roma. Nato come antica torrefazione a legna nel 1938, oggi Sant’Eustachio è una tappa obbligata per i romani e i turisti che vogliono assaporare la miscela 100% arabica importata direttamente dal Sud America. Classificato tra le 70 botteghe storiche della città, questo bar conserva l’arredamento tradizionale e quel <em>savoir</em> faire goliardico tipico del barista romano.
+      Per iniziare la giornata da vero romano doc dovrai tuffarti nel cuore della città, direzione Sant’Eustachio Il Caffè. Tra Piazza Navona e il Pantheon, un antico palazzo del XIX secolo ospita il bar più conosciuto di Roma. Nato come antica torrefazione a legna nel 1938, oggi Sant’Eustachio è una tappa obbligata per i romani e i turisti che vogliono assaporare la miscela 100% arabica importata direttamente dal Sud America. Classificato tra le 70 botteghe storiche della città, questo bar conserva l’arredamento tradizionale e quel <em>savoir faire</em> goliardico tipico del barista romano.
 
   - id: maxxi
     time: "09:45"
     place: MAXXI
     title: Il Museo nazionale delle arti del XXI secolo disegnato dall’archistar Zaha Hadid
     description: >
-      Virata verso Roma nord, direzione MAXXI. Il complesso futuristico a due passi dal Lungotevere Flaminio è il principale centro di creatività per l’arte e l’architettua contemporanea, che vede la prestigiosa firma dell’architetto anglo-irachena Zaha Hadid.  Inaugurato nel 2009, il progetto del MAXXI supera l’idea di edificio-museo per creare un discorso dinamico con il contesto urbano in cui si inserisce. Volumi complessi e pareti curvilinee danno nuova linfa all’ex caserma trasformata in un Campus per la ricerca creativa.
+      Virata verso Roma nord, direzione MAXXI. Il complesso futuristico a due passi dal Lungotevere Flaminio è il principale centro di creatività per l’arte e l’architettura contemporanea, che vede la prestigiosa firma dell’architetto anglo-irachena Zaha Hadid.  Inaugurato nel 2009, il progetto del MAXXI supera l’idea di edificio-museo per creare un discorso dinamico con il contesto urbano in cui si inserisce. Volumi complessi e pareti curvilinee danno nuova linfa all’ex caserma trasformata in un campus per la ricerca creativa.
 
   - id: museo-dell-ara-pacis
     time: "11:40"
     place: Museo dell’Ara Pacis
     title: Un involucro moderno custodisce l’altare della pace augustea
     description: >
-      Roma è una città dai forti contrasti e per capirne appieno la sua essenza basta fare un pit stop al Museo dell’Ara Pacis, sul Lungotevere in Augusta. Dopo una piacevole passeggiata tra le vetrine di Via del Corso, prosegui su Via di Ripetta e lì, poco prima del Ponte Cavour, troverai l’iconico cubo di travertino ad attenderti. Come uno scrigno dall’animo moderno, il progetto di Richard Meier conserva al suo interno il celebre altare dedicato dall’imperatore Augusto nel 9 a.C. alla Pace, consacrato alla celebrazione delle vittorie nel Campo Marzio. Il bianco accecante del cubo in travertino richiama quello dell’altare e dei reperti di età imperiale. Un <em>fil rouge</em> che lega il passato al presente della città.
+      Roma è una città dai forti contrasti e per capire la sua essenza basta fare un pit stop al Museo dell’Ara Pacis, sul Lungotevere in Augusta. Dopo una piacevole passeggiata tra le vetrine di via del Corso, prosegui su via di Ripetta e lì, poco prima del Ponte Cavour, troverai l’iconico cubo di travertino ad attenderti. Come uno scrigno dall’animo moderno, il progetto di Richard Meier conserva al suo interno il celebre altare dedicato dall’imperatore Augusto nel 9 a.C. alla Pace, consacrato alla celebrazione delle vittorie nel Campo Marzio. Il bianco accecante del cubo in travertino richiama quello dell’altare e dei reperti di età imperiale. Un <em>fil rouge</em> che lega il passato al presente della città.
 
   - id: ristorante-madre-roma-luxus-hotel
     time: "13:30"
@@ -53,26 +53,26 @@ features:
     place: La nuova Rinascente
     title: Moda, storia e design a due passi dalla Fontana di Trevi
     description: >
-      Il mondo del fashion va da sempre a braccetto con quello del design e a Roma tutto questo si concretizza nel nuovissimo store La Rinascente - Via del Tritone. Dopo una full immersion di cultura perché non concedersi un po’ di sano shopping di classe? Sviluppato su 14 mila metri quadrati, con ben 800 brand, il secondo <em>flagship department store</em> firmato La Rinascente è il frutto di 11 anni di meticoloso lavoro. Imperdibile: scendi al piano -1 per ammirare il sito archeologico con i resti preservati dell’Acquedotto vergine. Questo acquedotto romano fu costruito da Augusto nel 19 a.C. per alimentare tutte le più imponenti fontane del centro, inclusa la Fontana di Trevi.
+      Il mondo del fashion va da sempre a braccetto con quello del design e a Roma tutto questo si concretizza nel nuovissimo store La Rinascente - via del Tritone. Dopo una full immersion di cultura perché non concedersi un po’ di sano shopping di classe? Sviluppato su 14 mila metri quadrati, con ben 800 brand, il secondo <em>flagship department store</em> firmato La Rinascente è il frutto di 11 anni di meticoloso lavoro. Imperdibile: scendi al piano -1 per ammirare il sito archeologico con i resti preservati dell’Acquedotto vergine. Questo acquedotto romano fu costruito da Augusto nel 19 a.C. per alimentare tutte le più imponenti fontane del centro, inclusa la Fontana di Trevi.
 
   - id: macro
     time: "17:00"
     place: MACRO
     title: "Il Museo d’Arte Contemporanea di Roma: spazio di incontro tra gli artisti e la città"
     description: >
-      Nato come centro polivalente, il Macro si staglia nel panorama culturale capitolino per la sua continua ricerca verso l’innovazione. Linee futuristiche, acciaio e vetro sono l’anima portante dell’edificio che cambia la sua veste a seconda delle esposizioni e delle installazioni artistiche che ospita. Fino al 31 dicembre 2019 il Macro si fa Asilo e apre le sue porte a tutti, rivoluzionando il concetto di museo in una logica di partecipazione attiva della città e del pubblico agli eventi quotidiani. Perditi tra le stanze atelier, la stanza della parola e le opere degli artisti del futuro.
+      Nato come centro polivalente, il MACRO si staglia nel panorama culturale capitolino per la sua continua ricerca verso l’innovazione. Linee futuristiche, acciaio e vetro sono l’anima portante dell’edificio che cambia la sua veste a seconda delle esposizioni e delle installazioni artistiche che ospita. Fino al 31 dicembre 2019 il MACRO si fa Asilo e apre le sue porte a tutti, rivoluzionando il concetto di museo in una logica di partecipazione attiva della città e del pubblico agli eventi quotidiani. Perditi tra le stanze atelier, la stanza della parola e le opere degli artisti del futuro.
 
   - id: auditorium-parco-della-musica
     time: "20:00"
     place: Auditorium Parco della Musica
     title: Le armonie di tutto il mondo risuonano nel capolavoro di Renzo Piano
     description: >
-      Dal 2002 la musica ha una casa fissa a Roma ed è il magnifico Auditorium Parco della Musica progettato dal celebre Renzo Piano, che da anni ospita concerti, esposizioni e il seguitissimo Festival del Cinema di Roma. Concepito come un’architettura musicale vivente, l’Auditorium è frutto di un sapiente lavoro di riqualificazione urbana nel quartiere Parioli e rappresenta un punto di riferimento per la scena artistica e musicale della capitale.
+      Dal 2002 la musica ha una casa fissa a Roma ed è il magnifico Auditorium Parco della Musica progettato dal celebre architetto Renzo Piano, che da anni ospita concerti, esposizioni e il seguitissimo Festival del Cinema di Roma. Concepito come un’architettura musicale vivente, l’Auditorium è frutto di un sapiente lavoro di riqualificazione urbana nel quartiere Parioli e rappresenta un punto di riferimento per la scena artistica e musicale della capitale, lasciando di stucco i suoi visitatori.
 
   - id: zuma-palazzo-fendi
     time: "22:30"
     place: ZUMA – Palazzo Fendi
     title: Sapori orientali e vista mozzafiato sui tetti di Roma
     description: >
-      Dopo tanto girovagare tra le vie della Città Eterna, le emozioni non finiscono. Punta la bussola verso il centro, tra via Tomacelli e Via della Fontanella Borghese; è giunto il momento di rilassarsi e concedersi una pausa in una location eccezionale. All’ultimo piano dell’iconico Palazzo Fendi, potrai assaporare i piatti della tradizione giapponese e gustare un ottimo sake o un drink firmato ammirando la vista sulle meraviglie illuminate di Roma.
+      Dopo tanto girovagare tra le vie della Città Eterna, le emozioni non finiscono. Punta la bussola verso il centro, tra via Tomacelli e via della Fontanella Borghese; è giunto il momento di rilassarsi e concedersi una pausa in una location eccezionale. All’ultimo piano dell’iconico Palazzo Fendi, potrai assaporare i piatti della tradizione giapponese tra i tavoli del ristorante ZUMA, e poi gustare un ottimo sake o un drink firmato ammirando la vista sulle meraviglie illuminate di Roma.
 ---
