--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -52,7 +52,7 @@ features:
 
   - id: saftey
     title: Sicurezza migliorata
-    description: Grazie al nuovo sistema di sicurezza Lexus Safety Sistem +, UX HYBRID può beneficiare di un pacchetto di dispositivi straordinariamente completo, incluso il sistema di pre-collisione con rilevamento pedoni; l’allarme di allontanamento dalla corsia di marcia con assistenza al rilevamento di corsia, fari abbaglianti automatici, radar di controllo della velocità di crociera dinamico e riconoscimento dei segnali stradali. Per rendere il tuo viaggio in auto sempre più sicuro.
+    description: Grazie al nuovo sistema di sicurezza Lexus Safety Sistem +, UX Hybrid può beneficiare di un pacchetto di dispositivi straordinariamente completo, incluso il sistema di pre-collisione con rilevamento pedoni; l’allarme di allontanamento dalla corsia di marcia con assistenza al rilevamento di corsia, fari abbaglianti automatici, radar di controllo della velocità di crociera dinamico e riconoscimento dei segnali stradali. Per rendere il tuo viaggio in auto sempre più sicuro.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
 
   - id: config
