--- a/_pages/offerte/index.html
+++ b/_pages/offerte/index.html
@@ -4,6 +4,6 @@ id: hotels
 nav: true
 nav-order: 5
 
-title: Hotel
+title: Offerte
 intro: Scopri i migliori hotel di design in Italia o nel resto del mondo e regalati una vacanza dallo stile inimitabile. Prenotando un soggiorno in Italia potresti avere l'occasione di provare il nuovo Lexus UX Self Charging Hybrid durante la tua fuga di classe.
 ---
