--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -16,13 +16,13 @@ features:
     title: Pumphouse Point Hotel
     location: Tasmanien, Australien
     description: >
-      ie im Film fühlt sich, wer über die lange Brücke zum Pumphouse Point Hotel fährt, denn das jetzige Designhotel liegt mitten auf einem dunkel schimmernden Waldsee, untergebracht im Bau eines ehemaligen Wasserkraftwerks aus den 30er Jahren. Im Innern ergänzen sich Elemente der Industriearchitektur aus der Jahrhundertwende und moderne Details im zeitgenössischen Interieur. Die Aussicht ist umwerfend und die Erfahrung, in wunderschönen Natur zurückgezogen auf dem Wasser zu residieren, ein unvergessliches Erlebnis.
+      Wie im Film fühlt sich, wer über die lange Brücke zum Pumphouse Point Hotel fährt, denn das jetzige Designhotel liegt mitten auf einem dunkel schimmernden Waldsee, untergebracht im Bau eines ehemaligen Wasserkraftwerks aus den 30er Jahren. Im Innern ergänzen sich Elemente der Industriearchitektur aus der Jahrhundertwende und moderne Details im zeitgenössischen Interieur. Die Aussicht ist umwerfend und die Erfahrung, in wunderschönen Natur zurückgezogen auf dem Wasser zu residieren, ein unvergessliches Erlebnis.
 
   - id: treehotel
     title: Treehotel
     location: Harads, Schweden
     description: >
-      och im Norden in den schwedischen Wäldern warten sieben individuell gestaltete Unterkünfte in den Bäumen auf Gäste. Das extravagante Design fügt sich spielerisch in die Umgebung ein – und spiegelt im Wortsinn die Wildnis wider. Teilweise so avantgardistisch, dass sich keiner des Eindrucks erwehren kann, in Wahrheit in einer Traumlandschaft zu weilen. Typisch skandinavischer Minimalismus in der Einrichtung, bodentiefe Fenster und der faszinierende Ausblick in die umliegenden Wälder, die trotz der beeindruckenden Architektur der Baumhäuser immer Hauptattraktion bleiben – willkommen im Treehotel.
+      Hoch im Norden in den schwedischen Wäldern warten sieben individuell gestaltete Unterkünfte in den Bäumen auf Gäste. Das extravagante Design fügt sich spielerisch in die Umgebung ein – und spiegelt im Wortsinn die Wildnis wider. Teilweise so avantgardistisch, dass sich keiner des Eindrucks erwehren kann, in Wahrheit in einer Traumlandschaft zu weilen. Typisch skandinavischer Minimalismus in der Einrichtung, bodentiefe Fenster und der faszinierende Ausblick in die umliegenden Wälder, die trotz der beeindruckenden Architektur der Baumhäuser immer Hauptattraktion bleiben – willkommen im Treehotel.
 
   - id: the-siam
     title: The Siam
@@ -34,7 +34,7 @@ features:
     title: Fogo Island Inn
     location: Neufundland, Kanada
     description: >
-      or der wilden Küste von Neufundland steht auf Stelzen ein markanter Monolith modernen Designs – das Fogo Island Inn. Das pittoreske Fischerdörfchen in der Nähe scheint in krassem Gegensatz zur Avantgarde-Architektur des Hotels zu stehen, tatsächlich befinden sich beide in einer bemerkenswerten Symbiose. Die gesamte Region wurde durch die Eröffnung des Konzepthotels neu belebt, man vertraut auf regionale Rezepte mit Meeresfrüchten und frischem Fisch in der Hotelküche und den Gästen wird mit geführten Touren das örtliche Leben und die spektakuläre Natur nahegebracht. Jedes Zimmer hat raumhohe Fenster aus denen man weit übers Meer die Felsenküste hinabblickt, immer im Gefühl auf einem eleganten Kreuzfahrtschiff die Wellen zu durchpflügen.
+      Vor der wilden Küste von Neufundland steht auf Stelzen ein markanter Monolith modernen Designs – das Fogo Island Inn. Das pittoreske Fischerdörfchen in der Nähe scheint in krassem Gegensatz zur Avantgarde-Architektur des Hotels zu stehen, tatsächlich befinden sich beide in einer bemerkenswerten Symbiose. Die gesamte Region wurde durch die Eröffnung des Konzepthotels neu belebt, man vertraut auf regionale Rezepte mit Meeresfrüchten und frischem Fisch in der Hotelküche und den Gästen wird mit geführten Touren das örtliche Leben und die spektakuläre Natur nahegebracht. Jedes Zimmer hat raumhohe Fenster aus denen man weit übers Meer die Felsenküste hinabblickt, immer im Gefühl auf einem eleganten Kreuzfahrtschiff die Wellen zu durchpflügen.
 
   - id: the-beekman
     title: The Beekman
@@ -58,7 +58,7 @@ features:
     title: Royal Mansour
     location: Marrakesch, Marokko
     description: >
-      Marokkanische Palastpracht in royaler Form: Im Auftrag von König Mohammed VI arbeiteten hier die besten Handwerkes des Landes an kunstvollen Details und opulentem Dekor. Herrliche Fliesen, Schnitzkunst und verziertes Mobiliar sorgen in Verbindung mit atemberaubend aufmerksamem Service für wahrhaft königliche Erholung in Marrakesch. Der gesamte Komplex ist im Stil einer typisch marrokkanischen Medina gestaltet und sonnengeflutete Wege mit Wasserspielen verzaubern an jeder Ecke – ein blendendes Erlebnis.
+      Marokkanische Palastpracht in royaler Form: Im Auftrag von König Mohammed VI arbeiteten hier die besten Handwerker des Landes an kunstvollen Details und opulentem Dekor. Herrliche Fliesen, Schnitzkunst und verziertes Mobiliar sorgen in Verbindung mit atemberaubend aufmerksamem Service für wahrhaft königliche Erholung in Marrakesch. Der gesamte Komplex ist im Stil einer typisch marrokkanischen Medina gestaltet und sonnengeflutete Wege mit Wasserspielen verzaubern an jeder Ecke – ein blendendes Erlebnis.
 
   - id: awasi-patagonia
     title: Awasi Patagonien
