--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -41,7 +41,7 @@ features:
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
-    title: Perfetta per la città
+    title: Perfetto per la città
     description: Lexus UX vanta il più ampio campo visivo della sua categoria, ispirato al principio architettonico giapponese Engawa, in cui l'interno e l'esterno sono perfettamente collegati, consentendo una coesistenza più armoniosa con l'ambiente circostante. Questo design intelligente ti consente di percepire le dimensioni del veicolo, quindi è più facile da manovrare in città.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
