--- a/_pages/competition/index.html
+++ b/_pages/competition/index.html
@@ -7,7 +7,7 @@ no-test-drive-promo: true
 
 title: Competition
 long-title: Win your very own design escape
-intro: Enter below to win a luxurious design break in the UK. You’ll have the chance to choose between two gorgeous hotels – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel to your style. You’ll have use of the new Lexus UX Self-Charging Hybrid to complete your design escape.
+intro: Enter below to win a luxurious design break in the UK. You’ll have the chance to choose between two gorgeous hotels – whether you have a penchant for clean, scandi-inspired minimalism or elegant, heritage-meets-modern comfort, match the hotel to your style. You’ll have use of the new Lexus&nbsp;UX Self-Charging Hybrid to complete your design escape.
 iframe-url: https://promotion0000.strutta.me
 enter-cta: Enter Now
 ---
