--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -28,7 +28,7 @@ features:
     title: The Siam
     location: Bangkok, Thailand
     description: >
-      Erleben Sie feine Art-déco-Eleganz am Flußufer des Chao Phraya: Schwarz-weiße Fassaden, große Fensterfronten und turmartige Anbauten und Vorsprünge erinnern an die goldene Ära des Jazz – ein Thema, das sich auch im Inneren mit Marmor und antiken Details weiter fortsetzt. Das weitläufige, helle Atrium ist das offensichtliche Highlight der Hause, von hier gehen auch alle Zimmer ab. Es beeindruckt ein Mix aus Stilelementen, die Orient-Ambiente und klassische Details aus der Jahrhundertwende geschickt kombinieren. Auf den Zimmern finden Sie dunkles Holz, freistehende Badewannen und viel, viel Licht: Das Siam ist eine subtile Stilikone."
+      Erleben Sie feine Art-déco-Eleganz am Flußufer des Chao Phraya: Schwarz-weiße Fassaden, große Fensterfronten und turmartige Anbauten und Vorsprünge erinnern an die goldene Ära des Jazz – ein Thema, das sich auch im Inneren mit Marmor und antiken Details weiter fortsetzt. Das weitläufige, helle Atrium ist das offensichtliche Highlight der Hause, von hier gehen auch alle Zimmer ab. Es beeindruckt ein Mix aus Stilelementen, die Orient-Ambiente und klassische Details aus der Jahrhundertwende geschickt kombinieren. Auf den Zimmern finden Sie dunkles Holz, freistehende Badewannen und viel, viel Licht: Das Siam ist eine subtile Stilikone.
 
   - id: fogo-island-inn
     title: Fogo Island Inn
