--- a/_pages/design-hotels/index.html
+++ b/_pages/design-hotels/index.html
@@ -5,7 +5,7 @@ nav: true
 nav-order: 3
 
 title: Design-Hotels
-intro: "Zur Inspiration haben wir eine Liste außergewöhnlicher Design-Hotels für Sie zusammengestellt: Hier stimmen Konzept und Ambiente, aber auch Service und Interieur. Lassen Sie sich überraschen..."
+intro: "Zur Inspiration für Ihren nächsten Trip haben wir eine Liste besonderer Design-Hotels weltweit für Sie zusammengestellt. Das Außergewöhnliche ist hier Programm, denn wenn Avantgarde-Architektur, innovatives Design und bester Service zusammenkommen, erleben Sie mehr als nur Luxushotellerie. Hier stimmen Konzept und Ambiente."
 
 banner:
   title: Die besten Design-Hotels der Welt
@@ -16,7 +16,7 @@ features:
     title: Pumphouse Point Hotel
     location: Tasmanien, Australien
     description: >
-      Wie im Film fühlt sich, wer über die lange Brücke zum Pumphouse Point Hotel fährt, denn das jetzige Designhotel liegt mitten auf einem dunkel schimmernden Waldsee, untergebracht im Bau eines ehemaligen Wasserkraftwerks aus den 30er Jahren. Im Innern ergänzen sich Elemente der Industriearchitektur aus der Jahrhundertwende und moderne Details im zeitgenössischen Interieur. Die Aussicht ist umwerfend und die Erfahrung, in wunderschönen Natur zurückgezogen auf dem Wasser zu residieren, ein unvergessliches Erlebnis.
+      Wie im Film fühlt sich, wer über die lange Brücke zum Pumphouse Point Hotel fährt, denn das jetzige Designhotel liegt mitten auf einem dunkel schimmernden Waldsee, untergebracht im Bau eines ehemaligen Wasserkraftwerks aus den 30er Jahren. Im Innern ergänzen sich Elemente der Industriearchitektur aus der Jahrhundertwende und moderne Details im zeitgenössischen Interieur. Die Aussicht ist umwerfend und die Erfahrung, in wunderschöner Natur zurückgezogen auf dem Wasser zu residieren, ein unvergessliches Erlebnis.
 
   - id: treehotel
     title: Treehotel
@@ -28,7 +28,7 @@ features:
     title: The Siam
     location: Bangkok, Thailand
     description: >
-      Erleben Sie feine Art-déco-Eleganz am Flußufer des Chao Phraya: Schwarz-weiße Fassaden, große Fensterfronten und turmartige Anbauten und Vorsprünge erinnern an die goldene Ära des Jazz – ein Thema, das sich auch im Inneren mit Marmor und antiken Details weiter fortsetzt. Das weitläufige, helle Atrium ist das offensichtliche Highlight der Hause, von hier gehen auch alle Zimmer ab. Es beeindruckt ein Mix aus Stilelementen, die Orient-Ambiente und klassische Details aus der Jahrhundertwende geschickt kombinieren. Auf den Zimmern finden Sie dunkles Holz, freistehende Badewannen und viel, viel Licht: Das Siam ist eine subtile Stilikone.
+      Erleben Sie feine Art-déco-Eleganz am Flußufer des Chao Phraya: Schwarz-weiße Fassaden, große Fensterfronten und turmartige Anbauten und Vorsprünge erinnern an die goldene Ära des Jazz – ein Thema, das sich auch im Inneren mit Marmor und antiken Details weiter fortsetzt. Das weitläufige, helle Atrium ist das offensichtliche Highlight des Hauses, von hier gehen auch alle Zimmer ab. Es beeindruckt ein Mix aus Stilelementen, die Orient-Ambiente und klassische Details aus der Jahrhundertwende geschickt kombinieren. Auf den Zimmern finden Sie dunkles Holz, freistehende Badewannen und viel, viel Licht: Das Siam ist eine subtile Stilikone.
 
   - id: fogo-island-inn
     title: Fogo Island Inn
@@ -52,7 +52,7 @@ features:
     title: Mashpi Lodge
     location: Pichincha, Ecuador
     description: >
-      Tief im Nebelwald in Ecuadors liegt die Mashpi Lodge, ein Öko-Wunder aus Glas, Stahl und dem gewissen Etwas. Auf ausgedehnte Expeditionen zur Beobachtung wilder Tiere müssen sich die Gäste hier nicht unbedingt begeben: Aus dem Whirlpool heraus sieht man Affen und exotische Vögel, während man sich völlig dem Luxus der sprudelnden Wärme hingeben kann. Das Refugium in der Wildnis weiß seine Umgebung perfekt in das Erholungserlebnis einzubeziehen: Mit großen Fensterfronten bleibt der Blick ins Freie gewahrt und minimalistisches Interieur mit dezentem Luxus stiehlt dem Naturerlebnis nie die Show.
+      Tief im Nebelwald in Ecuador liegt die Mashpi Lodge, ein Öko-Wunder aus Glas, Stahl und dem gewissen Etwas. Auf ausgedehnte Expeditionen zur Beobachtung wilder Tiere müssen sich die Gäste hier nicht unbedingt begeben: Aus dem Whirlpool heraus sieht man Affen und exotische Vögel, während man sich völlig dem Luxus der sprudelnden Wärme hingeben kann. Das Refugium in der Wildnis weiß seine Umgebung perfekt in das Erholungserlebnis einzubeziehen: Mit großen Fensterfronten bleibt der Blick ins Freie gewahrt und minimalistisches Interieur mit dezentem Luxus stiehlt dem Naturerlebnis nie die Show.
 
   - id: royal-mansour
     title: Royal Mansour
@@ -64,7 +64,7 @@ features:
     title: Awasi Patagonien
     location: Magallanes, Chile
     description: >
-      Patagonien steht für Abgeschiedenheit und rauhe und windumtoste Landschaft. Im Awasi Patagonia wird Abenteuer neu interpretiert und wirklich klar, welche Bedeutungstiefe dem Wort Alltagsflucht in der Realität tatsächlich gegeben werden kann. Mit Understatement präsentiert das Awawi kubistisch anmutende Villen mit klarer Linienführung entlang eines Berghangs in einem riesigen Privatreservat. Ökologische Nachhaltigkeit steht an zentraler Stelle und dem intensiven Naturerlebnis nichts im Wege: Gästen jeder Villa wird morgendlich ein privater Guide mit Geländewagen zur Verfügung gestellt, der bei der Planung der Tagesabenteuer in unglaublichem Panorama zur Seite steht.
+      Patagonien steht für Abgeschiedenheit und rauhe, windumtoste Landschaft. Im Awasi Patagonia wird Abenteuer neu interpretiert und wirklich klar, welche Bedeutungstiefe dem Wort Alltagsflucht in der Realität tatsächlich gegeben werden kann. Mit Understatement präsentiert das Awawi kubistisch anmutende Villen mit klarer Linienführung entlang eines Berghangs in einem riesigen Privatreservat. Ökologische Nachhaltigkeit steht an zentraler Stelle und dem intensiven Naturerlebnis nichts im Wege: Gästen jeder Villa wird morgendlich ein privater Guide mit Geländewagen zur Verfügung gestellt, der bei der Planung der Tagesabenteuer in unglaublichem Panorama zur Seite steht.
 
   - id: deplar-farm
     title: Deplar Farm
