--- a/_pages/lexus-ux/index.html
+++ b/_pages/lexus-ux/index.html
@@ -5,8 +5,8 @@ nav: true
 nav-title: Lexus UX
 nav-order: 6
 
-title: Lexus UX
-intro: Erleben Sie den Lexus UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Desing begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil vom Luxus für heute mit einem Lexus UX entdecken.
+title: Den neuen Lexus UX erleben
+intro: Entdecken Sie den Lexus UX mit selbstladendem Hybridantrieb, eine beeindruckende Kombination aus elegantem Design, außergewöhnlicher Umweltverträglichkeit und innovativen Technologien. Lassen Sie sich auf einem City-Roadtrip von einer neuen Welt des Autofahrens mit aufregendem Design begeistern, das perfekt zum urbanen Lifestyle passt. Jetzt 24 Stunden lang probefahren und den Stil des Luxus von heute mit einem Lexus UX entdecken.
 
 intro-links:
 
@@ -26,7 +26,7 @@ feature-cta: Mehr entdecken
 features:
 
   - id: self-charge
-    title: Keine Aufladen. Kein Diesel. Keine Kompromisse.
+    title: Kein Aufladen. Kein Diesel. Keine Kompromisse.
     description: >
       Der Lexus UX lädt sich während der Fahrt selbstständig auf. Es müssen keine externen Ladestationen angefahren werden, es gibt keine Unterbrechungen auf Ihrer Reise. Ihre Fahrt wird mit der 4. Generation des Lexus-Hybridantriebs aus selbstladend hocheffizientem Elektromotor mit neu entwickelter Hybridschaltung und 4-Zylinder-Benzinmotor mit 2 Litern Hubraum auf sportlichen 178 PS zum Erlebnis.
     link: https://www.lexus.co.uk/car-models/ux/#ux-body-content
@@ -40,7 +40,7 @@ features:
   - id: design
     title: Intelligentes Design
     description: >
-      Dramatisch elegant und mit viel Persönlichkeit: der Lexus UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit diesem innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
+      Dramatisch elegant und mit viel Persönlichkeit: der Lexus UX ist durch seine sportliche Silhoutte, die charakteristische Frontpartie und das auffällige Design mit aeordynamischer Kantenführung ein wahrhafter Hingucker für die Stadt. Lassen Sie sich mit dieser innovativ gestaltete Crossover-Variante zwischen Kompaktauto und SUV auf Spritztouren durch die Stadt, Landpartien in Naturkulisse und zu neuen Abenteuern begleiten.
     link: https://www.lexus.co.uk/car-models/ux/new-horizon/
 
   - id: city
@@ -64,6 +64,6 @@ features:
   - id: config
     title: Konfigurieren
     description: >
-      Erleben Sie Ihre Lexus-Erfahrung mit vielfältigen Optionen – auch der dynamische F&nbsp;SPORT ist dabei. Stellen Sie Ihr Traumauto jetzt online selbst zusammen.
+      Gestalten Sie Ihre Lexus-Erfahrung mit vielfältigen Optionen – auch der dynamische F&nbsp;SPORT ist dabei. Stellen Sie Ihr Traumauto jetzt online selbst zusammen.
     link: https://carconfig.lexus.co.uk/gb/en/?UX/9add43d7-acff-42c5-8d52-00226c6467dc/configure
 ---
