--- a/_pages/angebote/index.html
+++ b/_pages/angebote/index.html
@@ -4,6 +4,6 @@ id: hotels
 nav: true
 nav-order: 5
 
-title: Hotels
+title: Angebote
 intro: Entdecken Sie unsere handverlesene Auswahl beliebter Design-Hotels in Deutschland und weltweit. Wer jetzt sein Lieblingshotel in Deutschland bucht, hat gleichzeitig die Gewinnchance auf den neuen Lexus UX mit selbstladendem Hybridantrieb für die Dauer des gesamten Trips.
 ---
